[gd_scene load_steps=12 format=3 uid="uid://4tc1kq1idr1p"]

[ext_resource type="Script" path="res://UI/Menus/MainMenu/main_menu.gd" id="1_1f8iv"]
[ext_resource type="Texture2D" uid="uid://ciak1t2kwvjk5" path="res://UI/Menus/MainMenu/backgroundImage.jpg" id="2_rcolv"]
[ext_resource type="Texture2D" uid="uid://csunoswur3jwe" path="res://UI/Menus/MainMenu/JankBot_small_bg.png" id="3_4c6re"]
[ext_resource type="ButtonGroup" uid="uid://ddb25c42b1awi" path="res://UI/Buttons/ui_buttons.tres" id="4_1r7ej"]
[ext_resource type="Texture2D" uid="uid://cgokxufbau5lj" path="res://UI/Menus/MainMenu/JankBot_logo.png" id="4_8bl70"]
[ext_resource type="Texture2D" uid="uid://dpsrwfgh8gcuj" path="res://UI/Buttons/JankBotTextBoxes_button_small.png" id="5_ofgxs"]
[ext_resource type="Script" path="res://UI/Buttons/ui_buttons_icon_version.gd" id="5_wqmac"]
[ext_resource type="Texture2D" uid="uid://3ga5yqmsptm2" path="res://UI/Icons/help_placeholder.svg" id="6_ixtcu"]
[ext_resource type="Texture2D" uid="uid://cgrgjbq73knh" path="res://UI/Buttons/JankBotTextBoxes_button_small_pressed.png" id="6_t1o0v"]
[ext_resource type="Texture2D" uid="uid://b75fg2y051bkf" path="res://UI/Icons/options_placeholder.svg" id="7_np1bb"]
[ext_resource type="Texture2D" uid="uid://q3b2qmqpr0qp" path="res://UI/Icons/quit_placeholder.svg" id="8_5hri1"]

[node name="Menu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_1f8iv")

[node name="TextureRect" type="TextureRect" parent="."]
layout_mode = 0
offset_right = 1355.0
offset_bottom = 762.0
scale = Vector2(0.85, 0.85)
texture = ExtResource("2_rcolv")
expand_mode = 1

[node name="TextureRect2" type="TextureRect" parent="."]
layout_mode = 2
offset_left = 119.0
offset_top = 93.0
offset_right = 1010.0
offset_bottom = 357.0
texture = ExtResource("3_4c6re")
expand_mode = 1

[node name="TitleContainer" type="MarginContainer" parent="."]
custom_minimum_size = Vector2(200, 100)
layout_mode = 1
anchors_preset = -1
anchor_left = 0.51
anchor_top = 0.5
anchor_right = 0.51
anchor_bottom = 0.5
offset_left = -394.52
offset_top = -261.0
offset_right = 354.48
offset_bottom = 147.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_bottom = 100

[node name="Title" type="Label" parent="TitleContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 80
horizontal_alignment = 1
vertical_alignment = 1

[node name="TextureRect" type="TextureRect" parent="TitleContainer"]
layout_mode = 2
texture = ExtResource("4_8bl70")
expand_mode = 1
stretch_mode = 5

[node name="MenuContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -505.0
offset_top = -219.0
offset_right = 495.0
offset_bottom = 56.0
grow_horizontal = 2
grow_vertical = 0
theme_override_constants/margin_left = 350
theme_override_constants/margin_right = 350
theme_override_constants/margin_bottom = 100

[node name="MenuVBoxContainer" type="VBoxContainer" parent="MenuContainer"]
layout_mode = 2
size_flags_vertical = 8
theme_override_constants/separation = 16
alignment = 1

[node name="StartGame" type="TextureButton" parent="MenuContainer/MenuVBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
tooltip_text = "Play Game"
toggle_mode = true
button_group = ExtResource("4_1r7ej")
texture_normal = ExtResource("5_ofgxs")
texture_pressed = ExtResource("6_t1o0v")

[node name="MenuContainer2" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -40.0
offset_bottom = 40.0
grow_horizontal = 0
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10

[node name="HBoxContainer" type="HBoxContainer" parent="MenuContainer2"]
layout_mode = 2
theme_override_constants/separation = 10
script = ExtResource("5_wqmac")
button_group = ExtResource("4_1r7ej")

[node name="Controls" type="Button" parent="MenuContainer2/HBoxContainer"]
layout_mode = 2
toggle_mode = true
button_group = ExtResource("4_1r7ej")
text = "
"
icon = ExtResource("6_ixtcu")
icon_alignment = 1

[node name="Options" type="Button" parent="MenuContainer2/HBoxContainer"]
layout_mode = 2
toggle_mode = true
button_group = ExtResource("4_1r7ej")
text = "
"
icon = ExtResource("7_np1bb")
icon_alignment = 1

[node name="Quit" type="Button" parent="MenuContainer2/HBoxContainer"]
layout_mode = 2
toggle_mode = true
button_group = ExtResource("4_1r7ej")
text = "
"
icon = ExtResource("8_5hri1")
icon_alignment = 1

[connection signal="pressed" from="MenuContainer/MenuVBoxContainer/StartGame" to="." method="_on_start_game_pressed"]
[connection signal="pressed" from="MenuContainer2/HBoxContainer/Controls" to="." method="_on_controls_pressed"]
[connection signal="pressed" from="MenuContainer2/HBoxContainer/Options" to="." method="_on_options_pressed"]
[connection signal="pressed" from="MenuContainer2/HBoxContainer/Quit" to="." method="_on_quit_pressed"]
